# cpp-3dgrapher

./: CMakeLists.txt  camera.h  main.cpp  shader.h  shaderloader.cpp  shaderloader.h
imgui/: imgui_impl_sdl.cpp
src/: main.cpp
src/glhelpers/: shader.h  shaderloader.h  shaders.h
